--- a/recipes/recipe_two.html
+++ b/recipes/recipe_two.html
@@ -12,7 +12,7 @@
 <body style="background-color: #282826; color: whitesmoke;">   
     <nav class="navbar navbar-expand-lg navbar-dark  sticky-top font-monospace px-2" style="background-color: #282827;">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">
+          <a class="navbar-brand" href="../index.html">
             <h4>Odin Recipes</h4>
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
